[package]
name = "user_pass"
version = "0.1.0"
authors = ["brightblade"]
edition = "2018"
license = "MIT"
repository = "https://gihub.com/brightblade42/user_pass"
description = """
user_pass is a small library for managing user names and passwords. All passwords
are hashed and salted using the argon2 library.
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "0.6"
rand = "0.7.2"
rand_chacha = "0.2.1"
structopt = "0.3.7"
indicatif = "0.13.0"
console = "0.9.1"

[dependencies.rusqlite]
version = "0.19.0"
features = ["bundled"]
